--- a/Pipfile
+++ b/Pipfile
@@ -6,24 +6,24 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-coverage = "==3.7.1"
-ecdsa = "==0.13"
-gunicorn = "==19.3.0"
-itsdangerous = "==0.24"
-nose = "==1.3.4"
-paramiko = "==1.15.2"
-pycrypto = "==2.6.1"
-python-bcrypt = "==0.3.1"
-Fabric = "==1.10.1"
-Flask = "==0.10.1"
-Flask-Bcrypt = "==0.6.2"
-Flask-SQLAlchemy = "==2.0"
-Flask-WTF = "==0.11"
-Jinja2 = "==2.7.3"
-MarkupSafe = "==0.23"
-SQLAlchemy = "==0.9.9"
-WTForms = "==2.0.2"
-Werkzeug = "==0.10.1"
+coverage = "*"
+ecdsa = "*"
+gunicorn = "*"
+itsdangerous = "*"
+nose = "*"
+paramiko = "*"
+pycrypto = "*"
+python-bcrypt = "*"
+Fabric = "*"
+Flask = "*"
+Flask-Bcrypt = "*"
+Flask-SQLAlchemy = "*"
+Flask-WTF = "*"
+Jinja2 = "*"
+MarkupSafe = "*"
+SQLAlchemy = "*"
+WTForms = "*"
+Werkzeug = "*"
 
 [requires]
 python_version = "3.7"
