--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
-Fabric==1.10.1
-Flask==0.10.1
-Flask-Bcrypt==0.6.2
-Flask-SQLAlchemy==2.0
-Flask-WTF==0.11
-Jinja2==2.7.3
-MarkupSafe==0.23
-SQLAlchemy==0.9.9
-WTForms==2.0.2
-Werkzeug==0.10.1
-coverage==3.7.1
+asn1crypto==0.24.0
+bcrypt==3.1.6
+cffi==1.12.2
+Click==7.0
+coverage==4.5.2
+cryptography==2.6.1
 ecdsa==0.13
-gunicorn==19.3.0
-itsdangerous==0.24
-nose==1.3.4
-paramiko==1.15.2
+fabric==2.4.0
+Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+gunicorn==19.9.0
+invoke==1.2.0
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+nose==1.3.7
+paramiko==2.4.2
+pyasn1==0.4.5
+pycparser==2.19
 pycrypto==2.6.1
-python-bcrypt==0.3.1
+PyNaCl==1.3.0
+python-bcrypt==0.3.2
+six==1.12.0
+SQLAlchemy==1.3.0
+Werkzeug==0.14.1
+WTForms==2.2.1
